# Stechuhr

./: .gitignore  README.md  pyproject.toml
stechuhr/: cli.py  config.py  engine.py  excel.py
