[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stechuhr"
version = "0.1.0"
description = "CLI Stechuhr (time clock) with Excel storage"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "openpyxl>=3.1",
]

[project.scripts]
stempel = "stechuhr.cli:cli"
